# calculator

./: .gitignore  CMakeLists.txt  main.cpp
src/: calc.cpp  calc.h  calc_test.cpp
